hphp/hack/test/typecheck/like_types/dynamic_coercion/lambda_hint.php.exp
File "lambda_hint.php", line 5, characters 6-7:
Invalid argument (Typing[4110])
File "lambda_hint.php", line 4, characters 23-25:
This is an int
File "lambda_hint.php", line 4, characters 39-45:
It is incompatible with a dynamic value
