hphp/hack/test/typecheck/like_types/dynamic_coercion/lambda_hint.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function f((function (int): void) $f, dynamic $d): void {
  $f($d); // error
}
